--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "."
-  command = "cd client && npm run build"
+  command = "cd client && npm install && npm run build"
   publish = "client/build"
 
 [[redirects]]
