fixed project section readability

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kellytruong.netlify.app",
   "engines": {
     "node": ">=18.19.0",
     "npm": ">=9.0.0"
